bk_ida/gobmkida/g3/do_find_superstring
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/do_find_superstring/src/engine/utils.c:2131:7: error: use of undeclared identifier 'dword_785CFC'
v15 = dword_785CFC[v13]; 
      ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/do_find_superstring/src/obj/1/utils.o] Error 1
